--- a/2/app/globals.css
+++ b/2/app/globals.css
@@ -22,6 +22,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
-
+overflow-y: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
